# Collision3D

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
include/collision3d/: AnyShapeMacros.hpp  Collision3d.hpp  CollisionAlgorithms.hpp  CollisionShapes.hpp  CollisionShapes_AnyOrCompound.hpp  CollisionShapes_HeightMap.hpp  CollisionShapes_HeightMapHeader.hpp  CollisionShapes_Primitives.hpp  ForwardDeclarations.hpp  HeightMapUtil.hpp  MathUtil.hpp  Rotation.hpp  SpecialisedCollisionShapes.hpp  Transform.hpp
src/: Algorithm_Sphere.cpp  Algorithms_AnyPrimitive.cpp  Algorithms_AnyShape.cpp  Algorithms_CompoundPrimitive.cpp  Algorithms_Convex.cpp  Algorithms_Cylinder.cpp  Algorithms_HeightMap.cpp  Algorithms_HeightMapHeader.cpp  Algorithms_RampRectangle.cpp  Algorithms_Sphere.cpp  Algorithms_VertBox.cpp  AnyShapeMacros.hpp  Collision.cpp
